test/spec/import-after-global.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/import-after-global.fail.wast
(;; STDERR ;;;
Error running "wast2wasm":
out/third_party/testsuite/import-after-global.fail.wast:1:22: imports must occur before all non-import definitions
(module (global i64) (import "" "" (table 0 anyfunc)))
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

;;; STDERR ;;)
